--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,27 +19,47 @@ jobs:
         with:
           version: 10
 
-      # 重要：registry-url を渡さない（token用npmrcを作らせない）
+      # ※ registry-url は付けない（setup-node に token 用 npmrc を作らせない）
       - uses: actions/setup-node@v4
         with:
           node-version: "22"
-
-      # registry は自分で設定（tokenは設定しない）
-      - name: Configure npm registry (no token)
-        shell: bash
-        run: |
-          npm config set registry "https://registry.npmjs.org/"
-          npm config get registry
-          # 念のため token が設定されていたら消す
-          npm config delete //registry.npmjs.org/:_authToken || true
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
       - run: pnpm exec nx build web-serial-rxjs
 
-      # OIDC publish（token env は渡さない）
-      - name: Publish to npm (Trusted Publishing / OIDC)
-        run: npm publish ./packages/web-serial-rxjs --access public --provenance
+      # --- ここからが肝：publish 時の npm 設定を完全隔離 ---
+      - name: Publish to npm (Trusted Publishing / OIDC) - isolated config
+        shell: bash
+        env:
+          # ★どこから注入されても publish では使わせない
+          NODE_AUTH_TOKEN: ""
+          NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc-ci
+          # ★HOME配下の ~/.npmrc を読ませない（探索を潰す）
+          HOME: ${{ github.workspace }}/_home_ci
+        run: |
+          set -euo pipefail
+
+          mkdir -p "${HOME}"
+
+          # token無しの npmrc を作る（registry だけ）
+          echo "registry=https://registry.npmjs.org/" > "${NPM_CONFIG_USERCONFIG}"
+          echo "always-auth=false" >> "${NPM_CONFIG_USERCONFIG}"
+
+          echo "== DEBUG (should be token-less) =="
+          echo "ACTIONS_ID_TOKEN_REQUEST_URL=${ACTIONS_ID_TOKEN_REQUEST_URL:+SET}"
+          echo "ACTIONS_ID_TOKEN_REQUEST_TOKEN=${ACTIONS_ID_TOKEN_REQUEST_TOKEN:+SET}"
+          echo "NODE_AUTH_TOKEN=${NODE_AUTH_TOKEN:+SET}"
+          echo "npm userconfig=$(npm config get userconfig)"
+          echo "npm registry=$(npm config get registry)"
+          echo "--- npmrc-ci ---"
+          cat "${NPM_CONFIG_USERCONFIG}"
+
+          # 念のため token が紛れた設定を消す（存在しても無視されるが保険）
+          npm config delete //registry.npmjs.org/:_authToken || true
+          npm config delete _authToken || true
+
+          npm publish ./packages/web-serial-rxjs --access public --provenance
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
